Fix modal font-size color and spacing

--- a/ms-challenge/static/css/_modal.scss
+++ b/ms-challenge/static/css/_modal.scss
@@ -30,6 +30,12 @@
         height: 100%;
         width: 100%;
         max-height: 100%;
+        h4 {
+            color:#322D2B;
+        }
+        p {
+            color:#73716C ;
+        }
     }
     .close-button {
         position: absolute;
