--- a/ms-challenge/static/css/_text.scss
+++ b/ms-challenge/static/css/_text.scss
@@ -34,3 +34,6 @@ p {
 .text-white {
     color:#ffffff;
 }
+.text-darker {
+    color:#322D2B;
+}
