--- a/ms-challenge/static/css/style.css
+++ b/ms-challenge/static/css/style.css
@@ -98,6 +98,10 @@ p {
   color: #ffffff;
 }
 
+.text-darker {
+  color: #322D2B;
+}
+
 html, body {
   min-height: 100%;
   height: 100%;
@@ -475,6 +479,14 @@ section .cards-fix .image-float {
   height: 100%;
   width: 100%;
   max-height: 100%;
+}
+
+.modal .modal-content h4 {
+  color: #322D2B;
+}
+
+.modal .modal-content p {
+  color: #73716C;
 }
 
 .modal .close-button {
